--- a/gb/19/11/19/n11665984.md
+++ b/gb/19/11/19/n11665984.md
@@ -1,18 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/carc2844/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/carc2844/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/carc2844/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>绿党今登记参选竹县立委 喊出“抗中保台”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/e30b75413ced399a603d35a2e67d5683-600x400.jpg" />
-<h6>绿党参选人余筱菁（中）、陈冠宇（左）与党内同志一起赴选委会，登记参选新竹县立委，喊出“抗中保台、桃竹首选”口号，希望在竹县能打出漂亮选战。（赖月贵／大纪元）
-</h6>
+<h6></h6>
 <hr>
-<p>【大纪元2019年11月19日讯】（大纪元记者赖月贵台湾新竹报导）<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E7%BB%BF%E5%85%9A.md#1">绿党</a>在今年立委选战全台共推出10位候选人，新竹县就占了3位，包括新竹县第一选区<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>、第二选区<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E9%99%88%E5%86%A0%E5%AE%87.md#1">陈冠宇</a>、泰雅族原住民立委参选人<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E5%BC%A0%E6%9B%9C%E7%BE%A4.md#1">张曜群</a>，今（19日）前往选委会办理登记，喊出“抗中保台、桃竹首选”口号，希望新竹县能打出漂亮选战。</p>
-<p>两位立委参选人<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>、<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E9%99%88%E5%86%A0%E5%AE%87.md#1">陈冠宇</a>，分别是现任竹县议员与竹北市民代表，在国民党深蓝艰困选区深耕<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E7%BB%BF%E5%85%9A.md#1">绿党</a>在地基层实力，两人均表示，虽面临选举压力需抓紧时间赶场，仍努力做好自己民代的本分，议会质询期间不缺席，确实发挥为民监督政府施政的职责。</p>
-<figure id="11665990" style="width: 500px" class="wp-caption aligncenter"><img class="" src="https://i.epochtimes.com/assets/uploads/2019/11/def5b58072213a379819f60d12656645-450x299.jpg" alt="今天正巧是陈冠宇(中)29岁的生日，同伴特别送他一个古早味蛋糕，并拿出党部募得的保证金20万元当作生日礼物祝福他" width="500" b="332" /><figcaption class="wp-caption-text">今天正巧是陈冠宇（中）29岁的生日，同伴特别送他一个古早味蛋糕，并拿出党部募得的保证金20万元当作生日礼物祝福他。（赖月贵／大纪元）</figcaption></figure>
-<figure id="11665988" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/afa2ae68ecf8b740e8994388afa8db94-450x299.jpg" alt="绿党陈冠宇(左)今天赴选委会登记参选竹县立委" width="500" /><figcaption class="wp-caption-text">绿党陈冠宇（左）今天赴选委会登记参选竹县立委。（赖月贵／大纪元）</figcaption></figure>
-<figure id="11665987" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/69edc1004bd059713a1648f1a1db0b74-450x299.jpg" alt="绿党余筱菁(左)今天赴选委会登记参选竹县立委" width="500" /><figcaption class="wp-caption-text">绿党余筱菁（左）今天赴选委会登记参选竹县立委。（赖月贵／大纪元）</figcaption></figure>
-<p>绿党提名的<ahref="https://github.com/carc2844/djy/blob/master/gb/tag/%E5%BC%A0%E6%9B%9C%E7%BE%A4.md#1">张曜群</a>是新竹县在地的泰雅族，长期在音乐领域发展、现任福尔摩沙合唱团男高音，多次参与国际大赛与国家音乐厅演奏，并出过个人专辑，去年演绎李哲艺音乐家的全人声原民故事作品《天祭》，为知名音乐人，此次代表绿党参选立委，希望在原住民民族自治与族语的复苏方面有更多着力点。今天本人因演唱排练没有到场，委托余筱菁代办登记。</p>
-<figure id="attachment_11665989" style="width: 334px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/c4e23c1e2f735c252d3e08f0baa6d1cb.jpg"><img class=" wp-image-11665989" src="https://i.epochtimes.com/assets/uploads/2019/11/c4e23c1e2f735c252d3e08f0baa6d1cb-266x400.jpg" alt="" width="334" b="503" /></a><figcaption class="wp-caption-text">绿党提名的张曜群是新竹县在地的泰雅族，也是知名的音乐人，希望参选为原住民争取权益 。（绿党提供）</figcaption></figure>
+<p>【大纪元2019年11月19日讯】（大纪元记者赖月贵台湾新竹报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%BF%E5%85%9A.md#1">绿党</a>在今年立委选战全台共推出10位候选人，新竹县就占了3位，包括新竹县第一选区<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>、第二选区<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E5%86%A0%E5%AE%87.md#1">陈冠宇</a>、泰雅族原住民立委参选人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E6%9B%9C%E7%BE%A4.md#1">张曜群</a>，今（19日）前往选委会办理登记，喊出“抗中保台、桃竹首选”口号，希望新竹县能打出漂亮选战。</p>
+<p>两位立委参选人<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%99%E7%AD%B1%E8%8F%81.md#1">余筱菁</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E5%86%A0%E5%AE%87.md#1">陈冠宇</a>，分别是现任竹县议员与竹北市民代表，在国民党深蓝艰困选区深耕<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%BF%E5%85%9A.md#1">绿党</a>在地基层实力，两人均表示，虽面临选举压力需抓紧时间赶场，仍努力做好自己民代的本分，议会质询期间不缺席，确实发挥为民监督政府施政的职责。</p>
+<figure id="11665990" aria-describedby="caption-11665990" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/def5b58072213a379819f60d12656645-450x299.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2019/11/def5b58072213a379819f60d12656645-450x299.jpg" alt="今天正巧是陈冠宇(中)29岁的生日，同伴特别送他一个古早味蛋糕，并拿出党部募得的保证金20万元当作生日礼物祝福他" width="500" b="332" /></a><figcaption id="caption-11665990" class="wp-caption-text">今天正巧是陈冠宇（中）29岁的生日，同伴特别送他一个古早味蛋糕，并拿出党部募得的保证金20万元当作生日礼物祝福他。（赖月贵／大纪元）</figcaption></figure>
+<figure id="11665988" aria-describedby="caption-11665988" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/afa2ae68ecf8b740e8994388afa8db94-450x299.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/afa2ae68ecf8b740e8994388afa8db94-450x299.jpg" alt="绿党陈冠宇(左)今天赴选委会登记参选竹县立委" width="500" /></a><figcaption id="caption-11665988" class="wp-caption-text">绿党陈冠宇（左）今天赴选委会登记参选竹县立委。（赖月贵／大纪元）</figcaption></figure>
+<figure id="11665987" aria-describedby="caption-11665987" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/11/69edc1004bd059713a1648f1a1db0b74-450x299.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/11/69edc1004bd059713a1648f1a1db0b74-450x299.jpg" alt="绿党余筱菁(左)今天赴选委会登记参选竹县立委" width="500" /></a><figcaption id="caption-11665987" class="wp-caption-text">绿党余筱菁（左）今天赴选委会登记参选竹县立委。（赖月贵／大纪元）</figcaption></figure>
+<p>绿党提名的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BC%A0%E6%9B%9C%E7%BE%A4.md#1">张曜群</a>是新竹县在地的泰雅族，长期在音乐领域发展、现任福尔摩沙合唱团男高音，多次参与国际大赛与国家音乐厅演奏，并出过个人专辑，去年演绎李哲艺音乐家的全人声原民故事作品《天祭》，为知名音乐人，此次代表绿党参选立委，希望在原住民民族自治与族语的复苏方面有更多着力点。今天本人因演唱排练没有到场，委托余筱菁代办登记。</p>
 <p>绿党今天登记参选也发生一个有趣的小插曲，因为正巧是陈冠宇29岁的生日，同伴特别送他一个古早味蛋糕，并拿出党部募得的保证金20万元当作生日礼物，祝福他更上一层楼，透过参选迈向人生另一阶段。</p>
 <p>责任编辑：王愉悦</p>
 
@@ -20,48 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114457.md#1">质询气氛火爆 余筱菁议员关切教育问题</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114076.md#1">为防疫能力打分数 竹县议员呼吁需再加强</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114071.md#1">大新竹生活圈？ 议员质询轻轨及AI智慧园区</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112530.md#1">亚太美国学校“艺空间”开幕  展出学生艺想世界</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111312.md#1">疫情趋缓 竹市府5月18日起停止户外洽公</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111257.md#1">郑宏辉获聘亚洲?硅谷顾问 力推新创平台</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108648.md#1">跨越时空 聿信“智慧听诊器”协助抗疫</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108614.md#1">宝安康大联盟 安肽生医积极投入对抗疫情</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108507.md#1">清大工学院获企业捐款 新进教师月薪多2万</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12105214.md#1">“像艺术家思考”邀儿童探索艺术家在想什么</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611231.md#1">纪念二二八 林智坚：民主火炬接棒守护台湾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611161.md#1">竹市三大赏樱胜地樱花陆续绽放 花期到4月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608635.md#1">苗栗旅游节“用栗买起来”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604457.md#1">苗县长勘查草莓裂果灾损 吁尽速争取灾害救助</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604414.md#1">选择优美说再见、尊严善终 您可以这样做</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13601564.md#1">鲁冰花季 苗栗茶产业行销</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13601439.md#1">洋国实业公司捐赠交通车、复康巴士 回馈家乡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12092756.md#1">美国先知凯西  预言当今的中国与世界</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/26/n11977962.md#1">奉创世主意旨  建立美国</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109744.md#1">【纪元播报】中共内部密集通知曝蓄意瞒疫情</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110571.md#1">【纪元播报】周晓辉：将病毒与911并列 川普要出重手</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109244.md#1">【胡乃文开讲】揉揉腹部3分钟 宿便排干净 中医教你解腹痛</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12108396.md#1">中研院薪水比卸任副元首礼遇金高？陈建仁回应</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109208.md#1">加速脱钩 川普：可切断整个中美关系</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106258.md#1">有意入籍台湾遭黄安攻击 黄秋生一句话爆呛</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110814.md#1">IU半个月三度捐款助人 生日前夕短发受关注</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106548.md#1">疫情下戴口罩产子 日女星用力过度致尾椎骨折</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111068.md#1">曝江蕙封麦后近况 陈子鸿笑喊：约吃饭都不来</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12105629.md#1">《花木兰》角色海选影片曝光 歌手窦靖童出镜</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107998.md#1">隐居山区70多年 俄罗斯最孤独女人不知疫情</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107708.md#1">加拿大小狗乐当奶爸 帮主人照顾几十只小猫</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106398.md#1">增肌一定要吃蛋白质 植物性蛋白更能燃脂</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106133.md#1">疫苗真是中共病毒解药？问世面临三大疑问</a></li>
-<li><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110895.md#1">女子濒死见上帝和耶稣 恳求还阳终获重生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/carc2844/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/19/n11665984.htm">绿党今登记参选竹县立委 喊出“抗中保台”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/19/n11665984.htm">绿党今登记参选竹县立委 喊出“抗中保台”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/19/11/19/n11665984.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/carc2844/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/11/19/n11665984.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
